Fix z-index

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,7 +11,7 @@ html, body, #mapid {
 }
 .container__item {
     position: absolute;
-    z-index: 999999;
+    z-index: 999;
     top: 10px;
     left: 60px;
 }
